# tonic_streaming_bug

./: Cargo.toml  build.rs
proto/: echo.proto
python/: echo_pb2.py  echo_pb2_grpc.py  server.py
src/pb/: echo.rs
