[package]
name = "tonic_streaming_bug"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
prost = "0.12.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"